--- a/src/assets/css/override-element-ui.scss
+++ b/src/assets/css/override-element-ui.scss
@@ -237,7 +237,7 @@ $blueBG:#1E88E5;
     line-height: 60px;
     text-align: right;
     .el-button{
-      width: 100px;
+      //width: 100px;
     }
   }
   .el-input {
