--- a/src/assets/css/override-element-ui.scss
+++ b/src/assets/css/override-element-ui.scss
@@ -107,6 +107,12 @@ $blueBG:#1E88E5;
    text-align: left!important;
  }
 }
+
+//.el-table--enable-row-hover .el-table__body tr:hover>td {
+//  //background-color: #F5F7FA;
+//  background-color: red!important;
+//}
+
 /*表格样式*/
 .el-table {
   td, th.is-leaf {
