--- a/src/assets/css/override-element-ui.scss
+++ b/src/assets/css/override-element-ui.scss
@@ -25,6 +25,16 @@ $blueBG:#1E88E5;
   }
 }
 
+.overOmitted {
+  text-overflow: -o-ellipsis-lastline;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
 .sys-edit {
   margin: 0 0 24px 20px;
 }
