--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -1,9 +1,9 @@
 @mixin clearfix {
-  &:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
+  // &:after {
+  //   content: "";
+  //   display: table;
+  //   clear: both;
+  // }
 }
 
 @mixin scrollBar {
@@ -24,4 +24,3 @@
   width: 100%;
   height: 100%;
 }
-
