--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -7,7 +7,7 @@
   } // 侧边栏
   .sidebar-container {
     transition: width 0.28s;
-    width: 180px!important;
+    width: 180px !important;
     height: 100%;
     position: fixed;
     top: 0;
@@ -19,7 +19,7 @@
       width: 100%;
     }
     .svg-icon {
-      margin-right: 16px;
+      margin-right: 2px;
     }
     .el-menu {
       border: none;
@@ -27,8 +27,9 @@
     }
   }
   .hideSidebar {
-    .sidebar-container,.sidebar-container .el-menu {
-      width: 36px!important;
+    .sidebar-container,
+    .sidebar-container .el-menu {
+      width: 36px !important;
       // overflow: inherit;
     }
     .main-container {
@@ -37,14 +38,14 @@
   }
   .hideSidebar {
     .submenu-title-noDropdown {
-      padding-left: 10px!important;
+      padding-left: 5px !important;
       position: relative;
       span {
         height: 0;
         width: 0;
         overflow: hidden;
         visibility: hidden;
-        transition: opacity .3s cubic-bezier(.55, 0, .1, 1);
+        transition: opacity 0.3s cubic-bezier(0.55, 0, 0.1, 1);
         opacity: 0;
         display: inline-block;
       }
@@ -61,15 +62,15 @@
           text-align: left;
           text-indent: 20px;
           top: 0px;
-          background-color: $subMenuBg!important;
+          background-color: $subMenuBg !important;
           opacity: 1;
         }
       }
     }
     .el-submenu {
-      &>.el-submenu__title {
-        padding-left: 10px!important;
-        &>span {
+      & > .el-submenu__title {
+        padding-left: 10px !important;
+        & > span {
           display: none;
         }
         .el-submenu__icon-arrow {
@@ -78,24 +79,25 @@
       }
       .nest-menu {
         .el-submenu__icon-arrow {
-          display: block!important;
+          display: block !important;
         }
         span {
-          display: inline-block!important;
+          display: inline-block !important;
         }
       }
     }
   }
 
   .el-menu--horizontal .el-menu-item:focus {
-    color: #fff!important;
-    background-color: #1E88E5!important;
+    color: #fff !important;
+    background-color: #1e88e5 !important;
   }
   .el-menu-item.is-active {
-    color: #fff!important;
-    background-color: rgba(0,0,0,0.3)!important;
+    color: #fff !important;
+    background-color: rgba(0, 0, 0, 0.3) !important;
     //background-color: $menuHover !important;
-    .itemCurrent,.itemCurrent1 {
+    .itemCurrent,
+    .itemCurrent1 {
       //background-color: #F99426;
     }
   }
@@ -109,7 +111,7 @@
     display: inline-block;
     width: 4px;
     height: 30px;
-    border-radius:0px 2px 2px 0px;
+    border-radius: 0px 2px 2px 0px;
   }
   .itemCurrent1 {
     position: absolute;
@@ -119,21 +121,21 @@
     display: inline-block;
     width: 4px;
     height: 30px;
-    border-radius:0px 2px 2px 0px;
+    border-radius: 0px 2px 2px 0px;
   }
 
   .el-icon-arrow-down:before {
     color: #fff;
   }
-  .nest-menu .el-submenu>.el-submenu__title,
+  .nest-menu .el-submenu > .el-submenu__title,
   .el-submenu .el-menu-item {
-    min-width: 180px!important;
+    min-width: 180px !important;
     //background-color: $subMenuBg!important;
     &:hover {
       //background-color: $menuHover!important;
     }
   }
-  .el-menu--collapse .el-menu .el-submenu{
-    min-width: 180px!important;
+  .el-menu--collapse .el-menu .el-submenu {
+    min-width: 180px !important;
   }
 }
